--- a/links.html
+++ b/links.html
@@ -1387,6 +1387,138 @@
       </div>
     </div>
 
+    <!-- 十七、网络安全 & 黑客训练 -->
+    <div class="group-title">十七、网络安全 & 黑客训练 <span>合法攻防演练、漏洞赏金平台</span></div>
+    <div class="grid">
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🛡️</div>
+            <div class="card-text">
+              <div class="card-title">HackerOne</div>
+              <div class="card-desc">全球最大漏洞赏金平台，白帽在这里接单赚钱。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://www.hackerone.com', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://www.hackerone.com</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🏢</div>
+            <div class="card-text">
+              <div class="card-title">Bugcrowd</div>
+              <div class="card-desc">面向企业的漏洞众测与赏金平台。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://www.bugcrowd.com', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://www.bugcrowd.com</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🎓</div>
+            <div class="card-text">
+              <div class="card-title">TryHackMe</div>
+              <div class="card-desc">一步一步教学式靶场，新手学渗透的好入口。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://tryhackme.com', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://tryhackme.com</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🧨</div>
+            <div class="card-text">
+              <div class="card-title">Hack The Box</div>
+              <div class="card-desc">难度更高的实战靶场，偏红队和进阶训练。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://www.hackthebox.com', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://www.hackthebox.com</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">📂</div>
+            <div class="card-text">
+              <div class="card-title">Exploit-DB</div>
+              <div class="card-desc">公开漏洞与利用代码数据库，查 PoC 用。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://www.exploit-db.com', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://www.exploit-db.com</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">📜</div>
+            <div class="card-text">
+              <div class="card-title">OWASP</div>
+              <div class="card-desc">Web 安全标准组织，Top 10 是必读清单。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://owasp.org', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://owasp.org</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🐉</div>
+            <div class="card-text">
+              <div class="card-title">Kali Linux</div>
+              <div class="card-desc">预装大量安全工具的系统，做实验环境用。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://www.kali.org', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://www.kali.org</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🧬</div>
+            <div class="card-text">
+              <div class="card-title">Reddit · r/netsec</div>
+              <div class="card-desc">安全从业者聚集的板块，看业界情报与讨论。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://www.reddit.com/r/netsec/', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://www.reddit.com/r/netsec/</div>
+      </div>
+    </div>
+
   </main>
 
   <footer>
