--- a/links.html
+++ b/links.html
@@ -1238,6 +1238,21 @@
         <div class="card-url">https://codepen.io</div>
       </div>
     </div>
+<div class="card">
+  <div class="card-header">
+    <div class="card-main">
+      <div class="card-icon">💬</div>
+      <div class="card-text">
+        <div class="card-title">Cusdis · 在线匿名留言系统</div>
+        <div class="card-desc">静态网站专用的在线评论系统，支持匿名、后台可管理。</div>
+      </div>
+    </div>
+    <button class="card-btn" onclick="window.open('https://cusdis.com/', '_blank')">
+      打开 <span>↗</span>
+    </button>
+  </div>
+  <div class="card-url">https://cusdis.com/</div>
+</div>
 
     <!-- 十二、学习与实用知识 -->
     <div class="group-title">十二、学习与实用知识 <span>教程、操作方法</span></div>
