--- a/index.html
+++ b/index.html
@@ -988,11 +988,13 @@ document.addEventListener("DOMContentLoaded", function () {
     </div>
 
     <!-- 顶部导航 -->
-    <div class="nav-row">
-      <a href="index.html" class="nav-link nav-active">首页</a>
-      <a href="yunshi.html" class="nav-link">每日运势</a>
-      <a href="links.html" class="nav-link">神秘链接</a>
-    </div>
+    <nav>
+  <a href="index.html" class="active">首页 / 命盘</a>
+  <a href="yunshi.html">每日运势</a>
+  <a href="links.html">常用链接</a>
+  <a href="talk.html">互动留言</a>
+</nav>
+
 
     <div class="flow-row">
       <div class="flow-track">
@@ -1346,3 +1348,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
