--- a/links.html
+++ b/links.html
@@ -428,11 +428,13 @@
           <span>小东勇闯东南亚 · 工作与生活工具索引</span>
         </div>
       </div>
-      <nav>
-        <a href="index.html">首页 / 命盘</a>
-        <a href="yunshi.html">每日运势</a>
-        <a href="links.html" class="active">常用链接</a>
-      </nav>
+     <nav>
+  <a href="index.html">首页 / 命盘</a>
+  <a href="yunshi.html">每日运势</a>
+  <a href="links.html" class="active">常用链接</a>
+  <a href="talk.html">互动留言</a>
+</nav>
+
     </div>
   </header>
 
