--- a/yunshi.html
+++ b/yunshi.html
@@ -386,8 +386,8 @@
 <div id="lock-screen">
   <div class="lock-box">
     <div class="lock-title">输入通关暗号</div>
-    <div class="lock-sub">紫微斗数 · 皇极经世流日记录档。</div>
-    <input id="password-input" class="lock-input" placeholder="请输入密码" />
+    <div class="lock-sub">紫微斗数 × 皇极经世流日档案。</div>
+    <input id="password-input" class="lock-input" placeholder="输入密钥" />
     <button class="lock-btn" onclick="checkPassword()">进入</button>
     <div id="lock-error"></div>
   </div>
@@ -401,18 +401,18 @@
         <img src="J.png" alt="logo">
         <div>
           <div class="logo-title">紫微斗数 · 流日运势记录</div>
-          <div class="logo-sub">本命四柱辛巳 壬午 戊子 己申为底，紫微斗数配合皇极经世节点研判。</div>
+          <div class="logo-sub">本命四柱：辛巳 壬午 戊子 己申 · 紫微斗数 × 皇极经世流日结构纪要。</div>
         </div>
       </div>
-      <div class="small-tag">术数结构纪要 · 内部自用</div>
+      <div class="small-tag">流日结构纪要</div>
     </div>
 
- <nav>
-  <a href="index.html">首页 / 命盘</a>
-  <a href="yunshi.html" class="active">每日运势</a>
-  <a href="links.html">常用链接</a>
-  <a href="talk.html">互动留言</a>
-</nav>
+    <nav>
+      <a href="index.html">首页 / 命盘</a>
+      <a href="yunshi.html" class="active">每日运势</a>
+      <a href="links.html">常用链接</a>
+      <a href="talk.html">互动留言</a>
+    </nav>
 
   </header>
 
@@ -426,7 +426,7 @@
           <div class="date-sub" id="today-lunar">公历／干支年信息加载中……</div>
         </div>
         <div class="date-extra">
-          排盘基准：本命四柱 + 紫微斗数星系 + 皇极经世岁运节气。
+          排盘基准：本命四柱＋紫微星系＋皇极经世岁运节气。
         </div>
       </div>
     </section>
@@ -439,9 +439,9 @@
         <div class="card-label">SECTION 01</div>
         <div class="card-title">流日盘总论 · 命身三方四正结构</div>
         <p id="overall-text">
-流日四化落命－财－官三合轴，紫微主星坐命，三方四正会禄权科，煞曜退居支线宫位，
-盘面呈「本命得气、流日配合」之象。命身线气势收束，适宜按原规划执行要事，
-以结构性安排为主，以情绪性决策为辅。
+命盘底格：辛巳 壬午 戊子 己申 · 偏官格兼伤官佩印。<br>
+流日结构：四化同落命－财－官三合轴，紫微坐命，会禄权科，煞曜退居他宫。<br>
+局象标签：命身得气／三方四正成格／流日配合本命。
         </p>
       </div>
 
@@ -460,17 +460,17 @@
             <tr>
               <td>一等可用</td>
               <td>命宫 · 官禄宫 · 迁移宫</td>
-              <td>命干得令，官禄宫会禄权，皇极经世上属「用事日在局」，可进行方向性与架构性决断。</td>
+              <td>命宫／官禄／迁移三方会禄权科；紫微坐命，官禄带权；皇极：用事日在局。</td>
             </tr>
             <tr>
               <td>二等可用</td>
               <td>财帛宫 · 田宅宫</td>
-              <td>财星承接得气而兼见轻忌，属「可布局、宜审条」之象，适合规划与整盘，不宜激烈加码。</td>
+              <td>财帛会禄存与科星并带轻忌；田宅成泄耗位；皇极：调仓阶段。</td>
             </tr>
             <tr>
               <td>谨慎观望</td>
               <td>夫妻宫 · 兄弟宫 · 朋友宫</td>
-              <td>关系宫位见煞并照，人事线「气行先、事行后」，宜记盘面，不宜定性人事。</td>
+              <td>夫妻、兄弟、交友见煞夹吉；关系宫位气行先于事；皇极：人事小运摇动。</td>
             </tr>
           </tbody>
         </table>
@@ -484,10 +484,9 @@
         <div class="card-label">SECTION 03</div>
         <div class="card-title">官禄宫 · 行动力与执行度</div>
         <p>
-官禄宫见武曲、七杀等刚性星曜，会化权、右弼，三方四正得迁移宫助力，
-为典型「官禄带权格」流日。皇极经世上，当值节点处于中元「用事局」，
-主执行力可直线推进，节点明确；但煞曜在支线宫位暗牵，外缘摩擦感偏重，
-宜将关键签批锁定在结构清晰、责任划分明确之项目。
+官禄格局：武曲七杀同度，会化权右弼，三方会迁移宫，官禄轴刚性主导。<br>
+皇极定位：中元「用事局」，官禄线为当值运行主线。<br>
+局象标签：执行轴硬／节点清晰／外缘摩擦度偏高。
         </p>
       </div>
     </section>
@@ -499,9 +498,10 @@
         <div class="card-label">SECTION 04</div>
         <div class="card-title">财帛宫 · 资金流与资源配置</div>
         <p>
-财帛宫会禄存及科星，田宅宫成泄耗位，化忌轻触财帛线，为「财气在盘中、数字需校正」之象。
-紫微斗数上看，为财星在三方得吉，而在四正见微忌；皇极经世上，大势属「调仓期、非攻伐期」，
-宜做资金结构重排、久账归档、合约条款校对，避免情绪性交易与新开高杠杆局。
+财帛格局：财帛会禄存与科星，田宅成泄耗位，化忌轻触财线。<br>
+紫微结构：三方得吉、四正带微忌。<br>
+皇极定位：调仓－换气期。<br>
+局象标签：账目整理／结构重排／合约条款校核。
         </p>
       </div>
     </section>
@@ -513,17 +513,17 @@
         <div class="card-label">SECTION 05</div>
         <div class="card-title">夫妻宫 / 兄弟宫 · 关系与气场流向</div>
         <p>
-夫妻宫受廉贞、贪狼等星系夹制，三方见煞不重而吉曜在外圈，会成「情绪放大、结构未破」之局。
-兄弟宫、朋友宫得左辅、右弼加会，为「信息线顺、人和线可用」的格局。
-若以皇极经世视之，人际属「小运摇动、大局未改」，宜以节气点为单位观察人事变动，
-记录来往与态度，不急于在流日层面做终局性判断。
+夫妻格局：廉贞、贪狼夹宫，三方轻煞夹吉。<br>
+人际轴线：兄弟宫、交友宫得左辅右弼会照。<br>
+皇极定位：人际小运起伏，大局位阶不动。<br>
+局象标签：情绪放大／结构未破／以节气节点观变。
         </p>
       </div>
     </section>
   </main>
 
   <footer>
-    紫微斗数 / 皇极经世 · 仅记录当日局势结构，不作吉凶绝断。
+    紫微斗数 × 皇极经世 · 流日结构记录档案。
   </footer>
 </div>
 
@@ -549,7 +549,7 @@
       if (input) input.value = "";
       unlockPage();
     } else {
-      if (err) err.textContent = "密码不对，再想想。";
+      if (err) err.textContent = "密钥错误。";
     }
   }
 
