--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>常用链接清单｜小东勇闯东南亚</title>
+  <title>常用链接清单｜Long live freedom!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="J.png" type="image/png">
@@ -410,7 +410,7 @@
 <div id="lock-screen">
   <div class="lock-box">
     <div class="lock-title">输入通关暗号</div>
-    <div class="lock-sub">常用链接清单 · 只给自己用的工具面板。</div>
+    <div class="lock-sub">常用链接清单 · 个人专用工具面板。Long live freedom!</div>
     <input id="password-input" class="lock-input" placeholder="请输入密码" />
     <button class="lock-btn" onclick="checkPassword()">进入</button>
     <div id="lock-error"></div>
@@ -425,16 +425,15 @@
         <div class="logo">J</div>
         <div class="title-text">
           <h1>常用链接清单</h1>
-          <span>小东勇闯东南亚 · 工作与生活工具索引</span>
+          <span>Long live freedom!</span>
         </div>
       </div>
-     <nav>
-  <a href="index.html">首页 / 命盘</a>
-  <a href="yunshi.html">每日运势</a>
-  <a href="links.html" class="active">常用链接</a>
-  <a href="talk.html">互动留言</a>
-</nav>
-
+      <nav>
+        <a href="index.html">首页 / 命盘</a>
+        <a href="yunshi.html">每日运势</a>
+        <a href="links.html" class="active">常用链接</a>
+        <a href="talk.html">互动留言</a>
+      </nav>
     </div>
   </header>
 
@@ -442,7 +441,7 @@
     <div class="section-title">OVERVIEW</div>
     <p class="intro">
       本页将常用站点按用途分类整理，当作「索引页」使用：图库、网络、资产、社交、流媒体、搜索，
-      一眼扫过去就知道今天要去哪里。
+      一眼扫过去就知道今天要去哪里。Long live freedom!
     </p>
 
     <!-- 一、图库与素材 -->
@@ -1239,22 +1238,23 @@
         </div>
         <div class="card-url">https://codepen.io</div>
       </div>
-    </div>
-<div class="card">
-  <div class="card-header">
-    <div class="card-main">
-      <div class="card-icon">💬</div>
-      <div class="card-text">
-        <div class="card-title">Cusdis · 在线匿名留言系统</div>
-        <div class="card-desc">静态网站专用的在线评论系统，支持匿名、后台可管理。</div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">💬</div>
+            <div class="card-text">
+              <div class="card-title">Cusdis · 在线匿名留言系统</div>
+              <div class="card-desc">静态网站专用的在线评论系统，支持匿名、后台可管理。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://cusdis.com/', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://cusdis.com/</div>
       </div>
     </div>
-    <button class="card-btn" onclick="window.open('https://cusdis.com/', '_blank')">
-      打开 <span>↗</span>
-    </button>
-  </div>
-  <div class="card-url">https://cusdis.com/</div>
-</div>
 
     <!-- 十二、学习与实用知识 -->
     <div class="group-title">十二、学习与实用知识 <span>教程、操作方法</span></div>
@@ -1539,7 +1539,7 @@
   </main>
 
   <footer>
-    本页仅作个人导航使用，链接内容以各站点实际页面为准。
+    本页仅作个人导航使用，链接内容以各站点实际页面为准。Long live freedom!
   </footer>
 </div>
 
